cluster/services/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demoappjava #update this to be used with kustomize
