cluster/services/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep
  labels:
    app: echo-relay-java-app
    dep: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-relay-java-app
      dep: default
  template:
    metadata:
      annotations:
        prometheus.io/path: "/status/format/prometheus"
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
      labels:
        app: echo-relay-java-app
        dep: default
